--- a/app/app.css
+++ b/app/app.css
@@ -103,10 +103,60 @@ rect.tooltip {
 }
 
 /* Style northward tooltips differently */
-.d3-tip.n:after {
+.d3-tip.w:after {
   margin: -1px 0 0 0;
-  top: 100%;
-  left: 0;
+  top: 50%;
+  left: 52%;
+  transform: rotate(-90deg);
+}
+
+.d3-tip.e:after {
+  margin: -1px 0 0 0;
+  top: 50%;
+  left: -52%;
+  transform: rotate(90deg);
+}
+
+.d3-tip ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  top: -.3em;
+  position: relative;
+}
+
+.d3-tip ul li {
+  line-height: .9em;
+  vertical-align: baseline;
+  display: table;
+  width: 100%;
+}
+
+.d3-tip ul li > * {
+  display: table-cell;
+}
+
+.d3-tip ul li .bullet {
+  width: 1.3em;
+}
+
+.d3-tip ul li .bullet span {
+  font-size: 3.5em;
+  display: block;
+  top: .26em;
+  position: relative;
+}
+
+.d3-tip ul li .company {
+  font-style: normal;
+  padding-left: .2em;
+  padding-right: .4em;
+} 
+
+.d3-tip ul li .amount {
+  text-align: right;
+  padding-right: .2em;
+  font-weight: normal;
 }
 
 .axis-x text, text.heading {
