--- a/app/app.css
+++ b/app/app.css
@@ -89,6 +89,11 @@ rect.tooltip {
   box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.6);
 }
 
+.d3-tip-custom {
+  position: absolute;
+  display: none;
+}
+
 /* Creates a small triangle extender for the tooltip */
 .d3-tip:after {
   box-sizing: border-box;
@@ -108,6 +113,12 @@ rect.tooltip {
   top: 50%;
   left: 52%;
   transform: rotate(-90deg);
+}
+
+.d3-tip.n:after {
+  margin: -1px 0 0 0;
+  bottom: -5px;
+  left: 0%;
 }
 
 .d3-tip.e:after {
