--- a/app/app.css
+++ b/app/app.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+* { font-family:'Open Sans',sans-serif; -webkit-font-smoothing:antialiased; font-smooth:never; }
+*, *:before, *:after    { -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; }
+
+
 #container {
 	background-color: #1F5D6E;
 	position: relative;
@@ -85,7 +89,6 @@ rect.tooltip {
   /*color: #315B68;*/
   border-radius: 3px;
   z-index: 1000;
-  font-family: sans-serif;
   font-size: 11px;
   box-shadow: 2px 2px 1px -1px rgba(0,0,0,0.6);
 }
@@ -181,7 +184,6 @@ rect.tooltip {
 }
 
 .axis-x text, text.heading {
-  font-family: Myriad, sans-serif;
   font-size: 20px;
   fill: white;
 }
@@ -195,13 +197,11 @@ text.heading {
 }
 
 .axis-x-support text {
-  font-family: Myriad, sans-serif;
   font-size: 12px;
   fill: #398192
 }
 
 .axis-y text, .label {
-  font-family: Myriad, sans-serif;
   font-size: 10px;
   font-weight: 100;
   fill: white;
