--- a/app/graph.css
+++ b/app/graph.css
@@ -109,16 +109,16 @@
   color: white;
   font-size: 2em;
   background-color: #4992A1;
-  opacity: 0;
+  opacity: 0.5;
   top: 0;
   z-index: 10;
   vertical-align: middle;
   cursor: pointer;
 }
 
-.znd-graph .navigable .pan:hover {
+/*.znd-graph .navigable .pan:hover {
   opacity: 0.5;
-}
+}*/
 
 .znd-graph .pan span {
   display: block;
@@ -129,11 +129,11 @@
   text-align: center;
 }
 
-.znd-graph .pan.left {
+.znd-graph .pan.backward {
   left: 0;
 }
 
-.znd-graph .pan.right {
+.znd-graph .pan.forward {
   right: 0;
 }
 
