--- a/app/3rd-party/style.css
+++ b/app/3rd-party/style.css
@@ -21,7 +21,8 @@ h2							{ font-weight:normal; display:block; float:left; width:100%; font-size:
 .block + .list				{ padding-top:0; }
 .list + .block				{ padding-top:0; }
 .block + .block				{ padding-top:0; }
-.list, .list li				{ padding:25px; }
+.list { margin-bottom: 20px; }
+.list li { margin-right: 15px; }
 .mobile						{ display:none; }
 .right						{ text-align:right; }
 .icon						{ display:block; float:left; line-height:20px; overflow:hidden; }
@@ -289,7 +290,7 @@ footer div div				{ width:20%; padding-right:20px; }
 
 @media screen and (max-width: 1024px) {
 .block						{ padding:30px; }
-.list, .list li				{ padding:15px; }
+.list			{ padding:0px; }
 h2							{ font-size:30px; }
 #main>p						{ font-size:18px; }
 #top-people li				{ width:33.33333%; }
@@ -308,7 +309,8 @@ header li					{ width:100%; border-top:1px solid rgba(255,255,255,0.1); padding:
 header li a					{ line-height:50px; padding:0; }
 .menu-help					{ display:none; }
 .block						{ padding:20px; }
-.list, .list li				{ padding:10px; }
+.list				{ padding:0px; }
+
 h2							{ font-size:24px; letter-spacing:-1px; }
 #search a					{ display:none; }
 #main>p						{ font-size:15px; }
