--- a/app/graph.css
+++ b/app/graph.css
@@ -202,6 +202,7 @@ body, html {
   width: 100%;
   line-height: 0.5;
   color: white;
+	font-family: sans-serif;
   content: "\25BC";
   position: absolute;
   text-align: center;
